--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <!-- About Section Content-->
                 <div>
                     <div>
-                        <h3>Hej!!</h3>
+                        <h3>Hej!</h3>
                         <p class="lead">
                             Jag är en erfaren UX-designer och specialist inom tillgänglighet med över fem års erfarenhet av hela designprocessen och ett CPACC-certifikat. 
                             Jag brinner för att skapa inkluderande och användarcentrerade lösningar och tror att bra design ska fungera för alla. Mitt arbete bygger på tvärfunktionellt samarbete, där jag smidigt integrerar insikter från utvecklare, 
