Commit message for your updates

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <h3>Hej!</h3>
                         <p class="lead">
                             Jag är en erfaren UX-designer och specialist inom tillgänglighet med över fem års erfarenhet av hela designprocessen och ett CPACC-certifikat. 
-                            Jag brinner för att skapa inkluderande och användarcentrerade lösningar och tror att bra design ska fungera för alla. Mitt arbete bygger på tvärfunktionellt samarbete, där jag smidigt integrerar insikter från utvecklare, 
-                            intressenter och slutanvändare. Jag anpassar mitt arbetssätt efter varje projekts unika behov och säkerställer att processerna är flexibla och resultaten har stor effekt. Mitt mål är att designa upplevelser som inte bara 
+                            Jag brinner för att skapa inkluderande och användarcentrerade lösningar och tycker att bra design ska fungera för alla. Mitt arbete bygger på tvärfunktionellt samarbete, där jag smidigt integrerar insikter från utvecklare, 
+                            intressenter och slutanvändare. Jag anpassar mitt arbetssätt efter varje projekts unika behov och säkerställer att processerna är flexibla och att resultaten har stor effekt. Mitt mål är att designa upplevelser som inte bara 
                             är funktionella och tillgängliga utan också effektiva, anpassningsbara och värdefulla för alla.
                         </p>
                     </div>
