--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-primary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top">Susanne Noren</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-text rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,7 +146,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-dark" 
+                    <a class="btn btn-xl btn-outline-light" 
                     href="assets/Resume – Susanne Norén.pdf" 
                     download="SusanneNoren_Resume.pdf"
                     aria-label="Download Susanne Norén's resume in PDF format">
