--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
                                         I facilitated three workshop sessions using card sorting to kick-start the creation of a content structure with the client. 
                                         The work continued in FigJam, where I developed a visual content structure that was easy for all stakeholders to understand and align with.
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/lrfia.png" alt="Information Architecture in FigJam" />
                                     <h4>FigJam & Figma as Collaboration Tools</h4>
                                     <p class="mb-4">
                                         To maintain efficient work sessions with the client, I used both FigJam and Figma. This enabled an iterative and collaborative process where decisions could be made 
@@ -573,14 +574,14 @@
                                             audience's needs were met. This agile approach allowed for quick decision-making and testing of various ideas without delays.
                                         </p>
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattennyhet.png" alt="Laptop with Svenskt Vatten's startpage" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/lrfcj.png" alt="Customer Journey in FigJam" />
                                     <h4>Designing for an Older Audience</h4>
                                     <p class="mb-4">
                                         LRF Samköp's primary audience consists of older individuals, and the new website is also expected to attract users from diverse companies and roles. 
                                         It was therefore crucial to create a website that was both accessible and welcoming. LRF Samköp set the desired level of accessibility, where I provided guidance and 
                                         expertise to inform decisions and implement accessible design solutions.
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenmobil.png" alt="Three mobiles showing different pages of Svenskt Vattens website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/lrfnb2.png" alt="Laptop showing the frontpage of LRF Samköp" />
                                     <h3>Deliverables & Result</h3>
                                     <p class="mb-4">
                                         Through an agile design process and accessibility expertise, we created a website for LRF Samköp that aligns with their other brands. 
@@ -596,6 +597,7 @@
                                         <li><strong>Technologies:</strong> Double Diamond, UX research, Workshop facilitation, Wireframing, Requirement management, Accessibility, Visual Design</li>
                                         <li><strong>Tools:</strong> Figma, Figjam, DevOps</li>
                                     </ul>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/lrfnb3.png" alt="Two mobiles showing the front page of LRF Samköp" />
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close window
