--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
                                             <li>Ensured full accessibility compliance and agile collaboration.</li>
                                           </ul>
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svbg1.png" alt="Two mobiles showing the education pages of Svenskt Vatten" />
                                     <h3>My process</h3>
                                     <p class="mb-4">
                                         Throughout the process, I had one key focus: to work closely with the client and guide them through the process, so they felt confident and heard. This resulted in a close 
@@ -348,6 +349,7 @@
                                         collaboration and a better understanding on both sides. A challange during the project was the switch of visual designer, which led to a new visual designer being onboarded
                                          quickly. This process was helped by close collaboration and the clearly defined requirements and wireframes.
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svia.png" alt="Information Architecture created in Figjam" />
                                     <h4>Creating the Information Architecture</h4>
                                     <p class="mb-4">
                                         The primary focus of the new website was to create a new structure for content and navigation. The client’s profile was scattered and had grown larger over time without a 
@@ -355,7 +357,7 @@
                                         the information architecture were gathered, and that the new structure reflected the client’s impact goals. The information architecture was created in FigJam and became 
                                         the base for the project.
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattennyhet.png" alt="Laptop with Svenskt Vatten's startpage" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svwf.png" alt="Wireframes of the education flow for Svenskt Vatten" />
                                     <h4>Cross-functionality & Agile Collaboration</h4>
                                     <p class="mb-4">
                                         Throughout the project, I also led several collaborive meetings in Figma with selected members from the client side to ensure that the right requirements were being collected 
@@ -373,7 +375,7 @@
                                         current accessibility standards and guidelines, including WCAG 2.2 and EN 301 549. I also carried out testing during and after the development phase to identify 
                                         any accessibility issues on an ongoing basis throughout the project.
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenmobil.png" alt="Three mobiles showing different pages of Svenskt Vattens website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svbg2.png" alt="Laptop showing the newspage of LRF Samköp" />
                                     <h3>Deliverables & Result</h3>
                                     <p class="mb-4">
                                         The result of our work was a dynamic, modern website where all of Svenskt Vatten’s many target groups have a clear place. The website is also designed and coded 
@@ -385,6 +387,7 @@
                                         <li><strong>Technologies:</strong> Double Diamond, Workshop facilitation, UX research, Wireframing, Requirement management, Accessibility</li>
                                         <li><strong>Tools:</strong> Figma, Figjam, DevOps, Screen Readers</li>
                                     </ul>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svbg3.png" alt="Laptop showing the newspage of LRF Samköp" />
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close window
