--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/LRF samköp.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 4-->
+                    <!-- Portfolio Item 4
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -100,7 +100,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/skk.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 5-->
+                    <!-- Portfolio Item 5-
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
