--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                         simplified navigation, and made their education offerings more visible. Accessibility and user-centered design were priorities throughout, resulting in a dynamic, 
                                         inclusive site that meets WCAG 2.2 standards.
                                         <h4>Key Achievements:</h4>
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>Developed clear goals and tailored the website to diverse audiences.</li>
                                             <li>Created a new Information Architecture and detailed wireframes.</li>
                                             <li>Ensured full accessibility compliance and agile collaboration.</li>
@@ -430,7 +430,7 @@
                                         Key goals included preserving existing user groups, raising awareness about the initiative, and enhancing communication between users and the police. 
                                         I created wireframes in Figma, conducted accessibility testing to meet WCAG 2.2 standards, and ensured iterative design through agile collaboration. The resulting app enhances community safety and communication, is accessible to all users, and supports iOS and Android platforms.
                                         <h4>Key Achievements:</h4>
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>Developed clear goals and tailored the website to diverse audiences.</li>
                                             <li>Created a new Information Architecture and detailed wireframes.</li>
                                             <li>Ensured full accessibility compliance and agile collaboration.</li>
@@ -449,14 +449,14 @@
                                         find out both their pain points but also get a greater understanding of ho the police and civil users uses the app. This information formed the basis for a requirements 
                                         specification and wireframes that reflected both client and user expectations.
                                         <h4>Some pain points that we early identified was:</h4>
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>There is an old app with users that already has groups, and many groups are not even in the app but instead in a mail list. These groups need to be preserved</li>
                                             <li>People don't understand what the initiative Neighbourhood Watch is, and frequently join "fake" groups on Facebook, that doesn't have the police contact that the real Neighbourhood watch has</li>
                                             <li>The engagement in the app is low, which causes the safety-effect of having a Neighbourhood Watch to lower</li>
                                           </ul>
                                           <h4>And thus, the goal of the project became:</h4>
                                           <ul>
-                                              <li>Create an MVP that allows people to create and join groups</li>
+                                              <li class="mb-4 text-start">Create an MVP that allows people to create and join groups</li>
                                               <li>Allow for existing groups to be moved to the new app, without having to redo their groups</li>
                                               <li>Raise awareness of what the initiative Neighbourhood is and how it actually works by introducing videos in onboarding and news articles in the app</li>
                                               <li>Introduce an easy way to chat within groups, to give users a reason to frequently engage with the app</li>
@@ -487,7 +487,7 @@
                                     <p class="mb-4">
                                         By combining user-centred design and accessibility expertise, we created an MVP for the Neighbourhood Watch app that improves both communication among neighbours and 
                                         safety in residential areas. The outcome was an effective and user-friendly app that:
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>Enhances communication between neighbours and the police</li>
                                             <li>Raises crime prevention awareness with up-to-date local crime information</li>
                                             <li>Builds strong community bonds through collaboration and sharing of information and tips</li>
@@ -538,7 +538,7 @@
                                         This project focused on designing an accessible, informative website for LRF Samköp, aligning with their brand and accommodating both smaller and larger customers. Through cross-functional collaboration, iterative design, and stakeholder engagement, we developed a site that supports effective communication and enhances customer journeys for diverse user groups.
                                         </p>
                                         <h4>Key Achievements:</h4>
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>Conducted user interviews and workshops to define customer needs and content structure.</li>
                                             <li>Created detailed customer journeys and wireframes to inform the site design.</li>
                                             <li>Designed for accessibility to meet the needs of an older and diverse audience.</li>
@@ -589,7 +589,7 @@
                                     <p class="mb-4">
                                         Through an agile design process and accessibility expertise, we created a website for LRF Samköp that aligns with their other brands. 
                                         The result is a new and informative website that:
-                                        <ul>
+                                        <ul class="mb-4 text-start">
                                             <li>Strengthens LRF Samköp’s brand</li>
                                             <li>Facilitates more effective communication of their mission and member benefits</li>
                                             <li>Serves as a landing page for larger companies, supporting their customer journey</li>
