--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvatten.png" alt="Laptop med Svenskt Vattens startsida" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenm.png" alt="Laptop med Svenskt Vattens startsida" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of working with Svenskt Vatten, an industry organisation that supports water and sewage organisations across Sweden, in their work to develop a new website. 
@@ -417,7 +417,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf.png" alt="Tre mobiler som visar olika vyer för Grannsamverkans-appen" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssfm.png" alt="Tre mobiler som visar olika vyer för Grannsamverkans-appen" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of collaborating with SAMBO and the Swedish Theft Prevention Association to develop a new Neighbourhood Watch (Grannsamverkan) app. 
@@ -527,7 +527,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/LRF samköp.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/LRF samköpm.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of collaborating with SAMBO and the Swedish Theft Prevention Association to develop a new Neighbourhood Watch (Grannsamverkan) app. 
