--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/svensktvattens.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/svensktvattens.png" alt="Laptop with Svenskt Vattens start page. />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/ssfs.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/ssfs.png" alt="Mobile falling into black sand, showing the login screen for Neighbourhood Watch App" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/LRF samköps.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/LRF samköps.png" alt="Laptop with LRF Samköps start page" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4
@@ -318,7 +318,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenm.png" alt="Laptop med Svenskt Vattens startsida" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenm.png" alt="Laptop with Svenskt Vattens start page" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of working with Svenskt Vatten, an industry organisation that supports water and sewage organisations across Sweden, in their work to develop a new website. 
@@ -417,7 +417,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssfm.png" alt="Tre mobiler som visar olika vyer för Grannsamverkans-appen" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssfm.png" alt="Mobile falling into black sand, showing the login screen for Neighbourhood Watch App" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of collaborating with SAMBO and the Swedish Theft Prevention Association to develop a new Neighbourhood Watch (Grannsamverkan) app. 
@@ -436,6 +436,7 @@
                                             <li>Ensured full accessibility compliance and agile collaboration.</li>
                                           </ul>
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf-3.png" alt="Two mobiles showing pages of Neighbourhood Watch App" />
                                     <h3>My process</h3>
                                     <p class="mb-4">
                                         The collaboration was cross-functional, involving iterative processes with developers, project managers, and stakeholders. 
@@ -463,18 +464,19 @@
                                               <li>Allow police to send messages to groups in order to raise the security and, again, give users a reason to frequently engage with the app</li>
                                             </ul>
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf-req.png" alt="Visualization of the Neighbourhood Watch App requirements" />
                                     <h4>From requirements to wireframes</h4>
                                     <p class="mb-4">
                                         A key part of the project involved creating intuitive wireframes in Figma. These served as a foundation for development and were designed with a focus on both user needs 
                                         and SAMBO’s strategic goals. I developed solutions that made it easy for users to communicate, share information and tips, and access updates on local crime incidents.
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattennyhet.png" alt="Laptop with Svenskt Vatten's startpage" />
                                     <h4>Cross-functionality & Agile Collaboration</h4>
                                     <p class="mb-4">
                                         To ensure efficiency in design and development, I organised regular cross-functional meetings. I continuously collaborated with developers, designers, and SAMBO 
                                         to test and validate functionality and design solutions in real-time. Using FigJam, I created user flows that formed the basis for workshops with the client to 
                                         ensure understanding and engagement. This agile approach enabled quick iterations and adjustments based on feedback and emerging requirements.
                                     </p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf-ia.png" alt="Tree strucutre of the Neighbourhood Watch App architecture" />
                                     <h4>Importance of Accessibility</h4>
                                     <p class="mb-4">
                                         As the accessibility specialist, I ensured the app complied with WCAG 2.2 and SAMBO’s specific accessibility standards. I conducted continuous testing with screen readers 
@@ -482,7 +484,7 @@
                                         Additionally, I provided internal training to my team to enhance their understanding of accessibility and emphasised the importance of integrating it early and 
                                         consistently throughout the project.
                                     </p>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/svensktvattenmobil.png" alt="Three mobiles showing different pages of Svenskt Vattens website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf-wf.png" alt="Wireframes showing a part of the user flow of Neighbourhood Watch App" />
                                     <h3>Deliverables & Result</h3>
                                     <p class="mb-4">
                                         By combining user-centred design and accessibility expertise, we created an MVP for the Neighbourhood Watch app that improves both communication among neighbours and 
@@ -498,6 +500,7 @@
                                         <li><strong>Technologies:</strong> Double Diamond, UX research, Workshop facilitation, Wireframing, Requirement management, Accessibility</li>
                                         <li><strong>Tools:</strong> Figma, Figjam, DevOps, Screen Readers</li>
                                     </ul>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ssf1.png" alt="Two mobiles showing Neighbourhood Watch app in darkmode" />
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close window
@@ -527,7 +530,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/LRF samköpm.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/LRF samköpm.png" alt="Laptop with LRF Samköps start page" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         I had the pleasure of collaborating with SAMBO and the Swedish Theft Prevention Association to develop a new Neighbourhood Watch (Grannsamverkan) app. 
