--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/svensktvattens.png" alt="Laptop showing Svenskt Vattens startpage" />
+                            <img class="img-fluid" src="assets/img/portfolio/svs.png" alt="Laptop showing Svenskt Vattens startpage" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -88,7 +88,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/LRF samköps.png.png" alt="Laptop showing LRF Samköps startpage" />
+                            <img class="img-fluid" src="assets/img/portfolio/LRF samköps.png" alt="Laptop showing LRF Samköps startpage" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4
